Changed page title and added bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <base href="/">
-  <title>Universal Test</title>
+  <title>Simple Rest Application</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
   <demo-app></demo-app>
